vlib/v/checker/tests/plus_or_minus_assign_one_err.out
vlib/v/checker/tests/plus_or_minus_assign_one_err.vv:3:6: error: use `++` instead of `+= 1`
    1 | fn main() {
    2 |     mut foo := 10
    3 |     foo += 1
      |         ~~
    4 |     foo -= 1
    5 | }
vlib/v/checker/tests/plus_or_minus_assign_one_err.vv:4:6: error: use `--` instead of `-= 1`
    2 |     mut foo := 10
    3 |     foo += 1
    4 |     foo -= 1
      |         ~~
    5 | }
