vlib/v/checker/tests/plus_or_minus_assign_one_err.vv
fn main() {
	mut foo := 10
	foo += 1
	foo -= 1
}